--- a/www/startpage/main.css
+++ b/www/startpage/main.css
@@ -2,108 +2,141 @@ body {
     background-color: #0F0F0F;
 }
 
-#search-query {
-    width: 200px;
-    position: absolute;
-    top: 240px;
-    left: 320px;
+input[type="text"] {
+    display: block;
+    text-align: center;
+    margin: 3% auto;
+    padding: 3px;
+    width: 50%;
+    padding-left: 0;
+    margin-top: 15%;
 }
 
-#left, #center, #right {
-    font-weight: bold;
-    font-size: 18px;
-    font-family: DejaVu Sans Mono;
-    width: 100px;
-    line-height: 32px;
-    position: absolute;
-    top: 320px;
+ul {
+    list-style-type: none;
 }
 
-#left {
-    left: 300px;
+.header-links {
+    height: 0;
+    line-height: 0;
+    padding: 0;
 }
 
-#center {
-    left: 600px;
+.header-links a {
+    float: left;
+    width: 100%;
 }
 
-#right {
-    left: 900px;
+.header-links p {
+    display: inline;
 }
 
-#left, #center, #right, ul a:link,
-#left, #center, #right, ul a:visited {
-    color: #6B6B6B;
-    text-decoration: none;
-}
-
-#left, #center, #right, ul a:hover {
-    color: #8D8D8D;
-    text-decoration: none;
-}
-
-h1 {
-    color: #DDDDDD;
-}
-
-h1 a:link, a:visited {
-    color: #1b83af;
-    text-decoration: none;
-}
-
-h1 a:hover {
-    color: rgba(82, 168, 224, 0.95);
-}
-
-#reddit-header, #sweclockers-header, #youtube-header {
+.header-links h1 {
     font-family: DejaVu Sans Mono;
     font-size: 28px;
 }
 
-#reddit-header {
+.header-links #reddit-header {
+    text-align: left;
     position: absolute;
-    top: 260px;
-    left: 330px;
+    width: 0%;
+    left: 25%;
 }
 
-#sweclockers-header {
-    /*text-align: center;*/
+.header-links #sweclockers-header {
+    text-align: center;
     position: absolute;
-    top: 260px;
-    left: 588px;
+    width: 100%;
+    left: 0;
+    padding-left: 0;
 }
 
-#youtube-header {
+.header-links #youtube-header {
+    text-align: right;
     position: absolute;
-    top: 260px;
-    left: 930px;
+    width: 75%;
+    left: 0;
+}
+
+.header-links h1 a:link,
+.header-links h1 a:visited {
+    color: #1b83af;
+    text-decoration: none;
+}
+
+.header-links h1 a:hover {
+    color: rgba(82, 168, 224, 0.95);
+    text-decoration: underline;
+}
+
+
+.box-links {
+    height: 0;
+    line-height: 0;
+    padding: 0;
+}
+
+.box-links a {
+    float: left;
+    width: 100%;
+}
+
+.box-links p {
+    display: inline-block;
+}
+
+.box-links li {
+    font-family: DejaVu Sans Mono;
+    font-size: 22px;
+    display: table;
+}
+
+.box-links #left-links {
+    text-align: left;
+    position: absolute;
+    top: 50%;
+    width: 0%;
+    left: 22.5%;
+}
+
+.box-links #center-links {
+    text-align: center;
+    position: relative;
+    top: 55%;
+    width: 0%;
+    left: 44%;
+}
+
+.box-links #right-links {
+    text-align: right;
+    position: absolute;
+    top: 50%;
+    width: 0%;
+    left: 64.5%;
+}
+
+.box-links a:link,
+.box-links a:visited {
+    color: #1083c4;
+    text-decoration: none;
+}
+
+.box-links a:hover {
+    color: #0b458a;
 }
 
 #bottom-row {
     font-family: DejaVu Sans Mono;
     font-size: 16px;
-    padding-left: 130px;
     position: absolute;
-    top: 590px;
+    top: 91%;
+    left: 20%;
 }
 
 #bottom-row ul li {
     list-style-type: none;
     margin: 0px 50px;
     float: left;
-    -o-transition: .5s;
-    -ms-transition: .5s;
-    -moz-transition: .5s;
-    -webkit-transition: .5s;
-    transition: .5s;
-
-}
-
-#bottom-row a {
-    transition: width 2s;
-    -moz-transition: width 2s;
-    -webkit-transition: width 2s;
-    -o-transition: width 2s;
 }
 
 #bottom-row a:link, #bottom-row a:visited {
@@ -111,43 +144,5 @@ h1 a:hover {
 }
 
 #bottom-row a:hover {
-    color: #7a0e38;
-}
-
-.dropbutton {
-   background-color: #202020;
-   color: #D9D9D9;
-   padding: 10px 40px;
-   font-size: 16px;
-   border: none;
-   font-family: DejaVu Sans Mono;
-}
-
-.dropbutton:hover {
-    background: #FF0000;
-}
-
-.dropdown-content {
-   font-family: DejaVu Sans Mono;
-   display: none;
-   position: absolute;
-   background-color: #6B6B6B;
-   min-width: 123px;
-   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-   z-index: 1;
-}
-
-.dropdown-content a {
-   color: black;
-   padding: 12px 16px;
-   text-decoration: none;
-   display: block;
-}
-
-.dropdown-content a:hover {
-    background-color: #8D8D8D
-}
-
-.show {
-    display: block;
+    color: #62111b;
 }
